--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ googleAnalytics = ""
 
 	[params.headtext]
 	enable = true
-		description = "Academic libraries and archives across Ontario are the custodians of a remarkable variety of unique materials that represent the collective memory of their institutions and communities. Increasingly, these materials exist in digital form: either acquired through purchase or donation, or created by the institution itself as university records or as the output of digitization projects. All of these heterogeneous digital objects require robust tools, systems and infrastructure for long-term preservation to ensure they remain accessible into the future.<br><br>Permafrost provisions a suite of tools, training and resources to enable members of the Ontario Council of University Libraries to begin actively processing digital objects for long-term preservation and access.<br><br><em>The Permafrost service is currently being rolled out in production to existing pilot test sites. New clients will be accepted in September 2018. Please [contact us](#contact) to express interest in using the service!</em>"
+		description = "Academic libraries and archives across Ontario are the custodians of a remarkable variety of unique materials that represent the collective memory of their institutions and communities. Increasingly, these materials exist in digital form: either acquired through purchase or donation, or created by the institution itself as university records or as the output of digitization projects. All of these heterogeneous digital objects require robust tools, systems and infrastructure for long-term preservation to ensure they remain accessible into the future.<br><br>Permafrost provisions a suite of tools, training and resources to enable members of the Ontario Council of University Libraries to begin actively processing digital objects for long-term preservation and access.<br><br><em>Permafrost is currently transitioning into a production service. New clients will be accepted beginning in September 2018. Please [contact us](#contact) to express interest in using the service!</em>"
 
 	# Benefits section
 	[params.services]
@@ -107,7 +107,7 @@ googleAnalytics = ""
             [[params.services.row.list]]
                 icon = "fa-cloud"
                 title = "Stored"
-                description = "Access to the Ontario Library Research Cloud for storage means secure, affordable and reliable storage for preservation. Data is replicated three times between five data centers located at Ontario universities."
+                description = "Access to the [Ontario Library Research Cloud](https://cloud.scholarsportal.info) for storage means secure, affordable and reliable storage for preservation. Data is replicated three times between five data centers located at Ontario universities."
 
 			[[params.services.row.list]]
                 icon = "fa-archive"
@@ -133,7 +133,7 @@ googleAnalytics = ""
 		[[params.about.events]]
 			img = "olrc-logo.png"
 			title = "OLRC"
-			description = "Participants access [the Ontario Library Research Cloud](https://cloud.scholarsportal.info) for storage, a secure and affordable private cloud created by libraries in Ontario."
+			description = "Participants access [the Ontario Library Research Cloud](https://cloud.scholarsportal.info) for storage, a secure and affordable private cloud created and hosted by libraries in Ontario."
 
 		[[params.about.events]]
 			img = "training.png"
@@ -186,27 +186,27 @@ googleAnalytics = ""
 
    		[[params.faq.questions]]
    		question = "What materials can Permafrost be used for?"
-   		answer = "Permafrost is intended for libraries and archives who need to preserve their digital assets so that they can be reliably maintained into the future. These can be born digital or digitized materials such as archival records, audiovisual materials, images, or text-based materials."
+   		answer = "Permafrost is intended for libraries and archives who need to preserve their digital assets so that they can be reliably maintained into the future. These can be born digital or digitized materials in many different formats, such as archival records, audiovisual materials, images, or text-based materials."
 		id = "01"
 
 		[[params.faq.questions]]
    		question = "What services does Scholars Portal provide as part of Permafrost?"
-   		answer = "Scholars Portal provides:<br><br> - Setup, installation and maintenance of Archivematica instance(s) <br>- Initial onboarding, testing and setup support, including a readiness interview/consultation and introductory training session <br>- Ongoing technical troubleshooting support<br>- Training resources, guides and tools<br>- Reporting data on stored packages<br>-Assistance with performing preservation actions over time."
+   		answer = "Scholars Portal provides:<br><br> - Setup, installation and maintenance of Archivematica instance(s) <br>- Initial onboarding, testing and setup support, including a readiness interview/consultation and introductory training session <br>- Ongoing technical troubleshooting support<br>- Training resources, guides and tools<br>- Reporting data on stored packages<br>-Assistance with performing preservation actions over time"
 		id = "02"
 
 		[[params.faq.questions]]
    		question = "What are the responsibilities of the subscribing institution?"
-   		answer = "The preserving institution:<br><br> - Determines the scope and structure of content to be preserved<br> - Actively uses the service to process digital content through the workflow<br> - Resources and manages staff use of, and access to, the service<br> - Determines preservation policies and procedures with input from Scholars Portal where requested<br> - Validates outputs against internal or external standards Initiates preservation actions over time"
+   		answer = "The subscribing institution:<br><br> - Determines the scope and structure of content to be preserved<br> - Actively uses the service to process digital content through the workflow(s)<br> - Resources and manages staff use of, and access to, the service<br> - Determines preservation policies and procedures with input from Scholars Portal where requested<br> - Validates outputs against internal or external standards <br> - Initiates preservation actions over time"
 		id = "03"
 
    		[[params.faq.questions]]
    		question = "What is Archivematica?"
-   		answer = "[Archivematica](https://www.archivematica.org/en/) is an open-source tool for processing digital archival materials for long-term preservation and access, including born-digital and digitized content. Archivematica is developed and maintained by Artefactual Systems Inc. Its primary function is to process data using a series of linked tasks called microservices to create Archival Information Packages (AIPs) for preservation and Dissemination Information Packages (DIPs) for access. It performs actions using a centralized Format Policy Registry (FPR) that is fully customizable based on institutional preferences. Archivematica integrates many individual open source tools for digital preservation tasks, such as file format identification, characterization, validation and normalization, into a single workflow."
+   		answer = "[Archivematica](https://www.archivematica.org/en/) is an open-source tool for processing digital objects for preservation and access, including born-digital and digitized content. Archivematica is developed and maintained by Artefactual Systems Inc. Its primary function is to process data using a series of linked tasks called microservices to create Archival Information Packages (AIPs) for preservation and Dissemination Information Packages (DIPs) for access. It performs actions using a centralized Format Policy Registry (FPR) that is fully customizable based on institutional preferences. Archivematica integrates many individual open source tools for digital preservation tasks, such as file format identification, characterization, validation and normalization, into a single workflow."
 		id = "04"
 
    		[[params.faq.questions]]
    		question = "What does an Archival Information Package (AIP) consist of?"
-   		answer = "An AIP consists of the original data objects and other materials that make up the original transfer, optionally normalized copies of data objects in preservation-friendly formats, submission documentation, logs, and a METS XML file describing the package’s contents, the relationships between these contents, and the actions performed on the contents as part of the Archivematica workflow."
+   		answer = "An AIP consists of the original data objects and other materials that make up the original transfer, optionally normalized copies of data objects in preservation-friendly formats, submission documentation, logs, and a METS-based XML file describing the package’s contents, the relationships between these contents, and the actions performed on the contents as part of the Archivematica workflow."
 		id = "05"
 
    		[[params.faq.questions]]
@@ -216,7 +216,7 @@ googleAnalytics = ""
 
 		[[params.faq.questions]]
 		question = "What other tools does Permafrost provide?"
-		answer = "Permafrost provides lightweight tools for making Archivematica-friendly CSV files for descriptive metadata import and access to tools related to the OLRC, such as Swiftbrowser, a browser-based method of transfering data into Archivematica and accessing stored packages. Additional tools are in development."
+		answer = "Permafrost provides a lightweight tool for making Archivematica-friendly CSV files for descriptive metadata import, and access to tools related to the OLRC, such as Swiftbrowser, a browser-based method of transfering data into Archivematica and accessing stored packages. Additional tools are in development."
 		id = "07"
 
 		[[params.faq.questions]]
@@ -236,7 +236,7 @@ googleAnalytics = ""
 
 		[[params.faq.questions]]
 		question = "Is Archivematica an access system or repository?"
-		answer = "No. Its main function is to produce well-formed data packages. It is not intended for end-users such as students or researchers and does not store the packages itself, though packages are searchable and downloadable through the interface. Hence, it must be connected to independent storage, which is why it pairs beautifully with the [Ontario Library Research Cloud](https://cloud.scholarsportal.info), which provides access to secure, affordable and reliable storage. <br><br> On the access side, metadata about a stored AIP can be uploaded to [Access to Memory (AtoM)](https://www.accesstomemory.org/en/) instances as part of the Permafrost service, and the DIPs created using Archivematica can be manually uploaded or linked to by users to their locally hosted AtoM instance. Automatic integration with locally-hosted instances of AtoM is in testing. AtoM integration allows the deposit of digital objects and metadata in AtoM.<br><br> Integrations with different access systems or repositories as transfer sources for data are also possible. [Contact us](#contact) for more information."
+		answer = "No. Its main function is to produce well-formed data packages. It is not intended for end-users such as students or researchers and does not store the packages itself, though packages are searchable and downloadable through the interface. Hence, it must be connected to independent storage, which is why it pairs beautifully with the [Ontario Library Research Cloud](https://cloud.scholarsportal.info), which provides access to secure, affordable and reliable storage. <br><br> On the access side, metadata about a stored AIP can be uploaded to [Access to Memory (AtoM)](https://www.accesstomemory.org/en/) instances as part of the Permafrost service, and the DIPs created using Archivematica can be manually uploaded or linked to by users to their locally hosted AtoM instance. Automatic integration with locally-hosted instances of AtoM is in testing. Automatic AtoM integration allows the deposit of digital objects and metadata in AtoM.<br><br> Integrations with different access systems or repositories as transfer sources for data are also possible. [Contact us](#contact) for more information."
 		id = "11"
 
    		[[params.faq.questions]]
@@ -256,7 +256,7 @@ googleAnalytics = ""
 
    		[[params.faq.questions]]
    		question = "If I want to get my data out, can I?"
-   		answer = "Absolutely. Permafrost does not keep your data within any proprietary system - data is stored outside of the Archivematica itself and your use of the Permafrost service is not locked in. However, systems-created data such as indexes cannot be extracted for users, though this can be easily re-generated from the stored AIPs themselves."
+   		answer = "Absolutely. Permafrost does not keep your data within any proprietary system - data is stored outside of the Archivematica itself and your use of the Permafrost service is not locked in. However, systems-created data such as indexes cannot be extracted for users, though this can be re-generated from the stored AIPs themselves."
 		id = "15"
 
    		[[params.faq.questions]]
@@ -268,6 +268,11 @@ googleAnalytics = ""
    		question = "I’m not a member of OCUL. Can I use Permafrost?"
    		answer = "Permafrost is for the use of OCUL members only at this time. However, please [contact us](#contact) if your organization is interested in using this service."
 		id = "17"
+
+		[[params.faq.questions]]
+   		question = "I'm interested. How do I get started?"
+   		answer = "Please [contact us](#contact) to express interest. Permafrost will be open to new clients in September 2018."
+		id = "18"
 
 
 	# Team section (disabled)
