--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ title = "Permafrost"
 languageCode = "en-us"
 theme = "hugo-agency-theme"
 # Enter your tracking code to enable Google Analytics
-googleAnalytics = ""
+googleAnalytics = "UA-9010354-12"
 
 [params]
 
