--- a/config.toml
+++ b/config.toml
@@ -93,7 +93,7 @@ googleAnalytics = ""
 
 	[params.headtext]
 	enable = true
-		description = "Academic libraries and archives across Ontario are the custodians of a remarkable variety of unique materials that represent the collective memory of their institutions and communities. Increasingly, these materials exist in digital form: either acquired through purchase or donation, or created by the institution itself as university records or as the output of digitization projects. All of these heterogeneous digital objects require robust tools, systems and infrastructure for long-term preservation to ensure they remain accessible into the future.<br><br>Permafrost provisions a suite of tools, training and resources to enable members of the Ontario Council of University Libraries to begin actively processing digital objects for long-term preservation and access.<br><br><b>Permafrost is now available to OCUL members. Interested in subscribing? Please [contact us](#contact) to express interest in using the service! Want a demo? [Request access](#contact) to our sandbox!</b>"
+		description = "Academic libraries and archives across Ontario are the custodians of a remarkable variety of unique materials that represent the collective memory of their institutions and communities. Increasingly, these materials exist in digital form: either acquired through purchase or donation, or created by the institution itself as university records or as the output of digitization projects. All of these heterogeneous digital objects require robust tools, systems and infrastructure for long-term preservation to ensure they remain accessible into the future.<br><br>Permafrost provisions a suite of tools, training and resources to enable members of the Ontario Council of University Libraries to begin actively processing digital objects for long-term preservation and access. It is operated by Scholars Portal on a cost-recovery basis.<br><br><b>Permafrost is now available to OCUL members. Interested in subscribing? Please [contact us](#contact) to express interest in using the service! Want a demo? [Request access](#contact) to our sandbox!</b>"
 
 	# Benefits section
 	[params.services]
@@ -268,20 +268,25 @@ googleAnalytics = ""
    		answer = "Absolutely. Permafrost does not keep your data within any proprietary system - data is stored outside of the Archivematica itself and your use of the Permafrost service is not locked in. However, systems-created data such as indexes cannot be extracted for users, though this can be re-generated from the stored AIPs themselves."
 		id = "15"
 
+		[[params.faq.questions]]
+   		question = "How secure is Permafrost?"
+   		answer = "Archivematica instances are installed, hosted, and maintained by Scholars Portal on CentOS-based virtual machines installed on hardware at the University of Toronto Libraries’ data centre and supported by our systems team. Access to Archivematica instances are limited by OCUL member IP ranges and secured via SSL and user logins.<br><br>Upload and download to and from the OLRC is also secured by SSL. On the OLRC itself, network nodes in the storage cloud are connected through ORION, the high-speed research network that is supported by Ontario’s universities. Data is transferred between nodes over a private network within the ORION infrastructure.<br><br>All data centres involved in the service are restricted to IT staff and have intrusion detection systems (IDS) in place. Data centres implement standard security controls, including the use of firewalls, to limit inbound and outbound traffic to specific ports and from specific domains."
+		id = "16"
+
    		[[params.faq.questions]]
    		question = "What is the difference between hardware sizes?"
    		answer = "Archivematica runs on virtual machines that are hosted at Scholars Portal. Not all institutions need a full-capacity machine running at all times. A large machine will be able to process larger-sized transfers or transfers with many files more quickly and is recommended for organizations with greater quantities of audio and video. A medium sized machine is suitable for multimedia transfers up to 5 GB in size. A small machine is suitable for small transfer packages mostly consisting of text and photographs under 1 GB. Part of the onboarding process will involve assessing what machine is right for your needs."
-		id = "16"
+		id = "17"
 
    		[[params.faq.questions]]
    		question = "I’m not a member of OCUL. Can I use Permafrost?"
    		answer = "Permafrost is for the use of OCUL members only at this time. However, please [contact us](#contact) if your organization is interested in using this service."
-		id = "17"
+		id = "18"
 
 		[[params.faq.questions]]
    		question = "I'm interested. How do I get started?"
    		answer = "Please [contact us](#contact) to express interest. Access to a sandbox instance is also available for those interested in a demonstration."
-		id = "18"
+		id = "19"
 
 
 	# Team section (disabled)
