--- a/data/projects/LibCollections.yaml
+++ b/data/projects/LibCollections.yaml
@@ -6,8 +6,8 @@ preview: collections-preview.jpg
 category: Use Cases
 description: "Permafrost is a great fit for libraries looking to preserve digital collections in libraries, whether they are digitized or born-digital materials.<br><br>
 
-Over the past several decades, libraries have undertaken many large-scale digitization projects across various media types, including textual materials such as theses, photograph collections, and audiovisual materials. The creation and capture of born-digital library materials is also now a day-to-day process for most libraries. These include ensuring the maintenance of student and faculty research products; web archiving projects; collections from government, map and data libraries; and more.<br><br>
+Over the past several decades, libraries have undertaken many large-scale digitization projects across various media types, including textual materials such as theses, photograph collections, and audiovisual materials. The creation and capture of born-digital library materials is also now a day-to-day process for most libraries. These include ensuring the maintenance of student and faculty research products, web archiving projects, collections from government, map and data libraries, and more.<br><br>
 
-All of these valuable digital materials represent a significant investment of time and effort, and therefore require proper preservation to ensure their future viability, whether through robust metadata and file format validation, customizable normalization to preservation-friendly formats, or the creation of access copies in formats suitable for users.<br><br>
+All of these valuable digital materials represent a significant investment of time and effort, and therefore require safe preservation to ensure their future viability, whether through robust metadata and file format validation, customizable normalization to preservation-friendly formats, or the creation of access copies in formats suitable for users.<br><br>
 
 Integration with library digital repositories such as DSpace is also available at extra cost."
