add new markup rendering option for inline html to work

--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,11 @@ theme = "hugo-agency-theme"
 #googleAnalytics = "UA-9010354-12"
 googleAnalytics = ""
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
 [params]
 
 	# You can use Markdown syntax for urls [text](//url.to/source) or
