--- a/config.toml
+++ b/config.toml
@@ -103,7 +103,7 @@ googleAnalytics = ""
 
 	[params.headtext]
 	enable = true
-		description = "Academic libraries and archives across Ontario are the custodians of a remarkable variety of unique materials that represent the collective memory of their institutions and communities. Increasingly, these materials exist in digital form: either acquired through purchase or donation, or created by the institution itself as university records or as the output of digitization projects. All of these heterogeneous digital objects require robust tools, systems and infrastructure for long-term preservation to ensure they remain accessible into the future.<br><br>Permafrost provisions a suite of tools, training and resources to enable members of the Ontario Council of University Libraries to begin actively processing digital objects for long-term preservation and access. It is operated by Scholars Portal on a cost-recovery basis.<br><br><b>Permafrost is now available to OCUL members. Interested in subscribing? Please [contact us](#contact) to express interest in using the service! Want a demo? [Request access](#contact) to our sandbox!</b>"
+		description = "Academic libraries and archives across Ontario are the custodians of a remarkable variety of unique materials that represent the collective memory of their institutions and communities. Increasingly, these materials exist in digital form: either acquired through purchase or donation, or created by the institution itself as university records or as the output of digitization projects. All of these heterogeneous digital objects require robust tools, systems and infrastructure for long-term preservation to ensure they remain accessible into the future.<br><br>Permafrost provisions a suite of tools, training and resources to enable members of the Ontario Council of University Libraries to begin actively processing digital objects for long-term preservation and access. It is operated by Scholars Portal on a cost-recovery basis<br><br><b>- Want to learn more?</b> Watch our [introductory video](https://youtu.be/VE1cARC7wqk).<br><b>- Want a demo? </b>[Request access](#contact) to our sandbox!</b><br><b>- Interested in subscribing? </b>Please [contact us](#contact) to express interest in using the service!"
 
 	# Benefits section
 	[params.services]
@@ -147,7 +147,7 @@ googleAnalytics = ""
 		[[params.about.events]]
 			img = "archivematica.png"
 			title = "Archivematica"
-			description = "Permafrost’s central function is provisioning hosted instance(s) of the preservation package generator [Archivematica](https://www.archivematica.org/en/), a standards-based workflow tool for producing preservation-worthy packages of data for the future. Multiple instances are available at reduced cost for institutions with a variety of needs."
+			description = "Permafrost’s central function is provisioning hosted instances of the preservation package generator [Archivematica](https://www.archivematica.org/en/), a standards-based workflow tool for producing preservation-worthy packages of data for the future. Multiple instances are available at reduced cost for institutions with a variety of needs."
 
 		[[params.about.events]]
 			img = "olrc-logo.png"
@@ -162,7 +162,7 @@ googleAnalytics = ""
 		[[params.about.events]]
 			img = "resources.png"
 			title = "Tools & resources"
-			description = "Permafrost includes additional tools for smoother workflows, alongside guides and documentation to make getting up and running easier."
+			description = "Permafrost includes additional tools for smoother workflows alongside guides and documentation to make getting up and running easier."
 
 		[[params.about.events]]
 			img = "atom.png"
@@ -205,7 +205,7 @@ googleAnalytics = ""
 
    		[[params.faq.questions]]
    		question = "What materials can Permafrost be used for?"
-   		answer = "Permafrost is intended for libraries and archives who need to preserve their digital assets so that they can be reliably maintained into the future. These can be born digital or digitized materials in many different formats, such as archival records, audiovisual materials, images, or text-based materials."
+   		answer = "Permafrost is intended for libraries and archives who need to preserve their digital assets so that they can be reliably maintained into the future. Materials can include born-digital or digitized assets in many different formats, such as archival records, audiovisual materials, images, or text-based materials."
 		id = "01"
 
 		[[params.faq.questions]]
@@ -275,7 +275,7 @@ googleAnalytics = ""
 
    		[[params.faq.questions]]
    		question = "If I want to get my data out, can I?"
-   		answer = "Absolutely. Permafrost does not keep your data within any proprietary system - data is stored outside of the Archivematica application itself and your use of the Permafrost service is not locked in. However, systems-created data such as indexes cannot be extracted for users, though this can be re-generated from the stored AIPs themselves."
+   		answer = "Absolutely. Permafrost does not keep your data within any proprietary system - AIPs are stored outside of the Archivematica application itself and your use of the Permafrost service is not locked in. However, systems-created data such as indexes cannot be extracted for users, though this can be re-generated from the stored AIPs themselves."
 		id = "15"
 
 		[[params.faq.questions]]
@@ -285,7 +285,7 @@ googleAnalytics = ""
 
    		[[params.faq.questions]]
    		question = "What is the difference between hardware sizes?"
-   		answer = "Archivematica runs on virtual machines that are hosted at Scholars Portal. The size of the hardware required relates to the size and quantity of files to be processed, so subscribers should have a good sense of extent the materials they intend to process. A Level 1 machine is most comfortably used for packages in the 0-50 GB range and consisting of fewer than 500 files. A Level 2 machine will be able to process larger-sized transfers over 50 GB or with more individual files and is recommended for organizations with greater quantities of audio and video or greater quantities of files. Part of the onboarding process will involve assessing what machine is right for your needs."
+   		answer = "Archivematica runs on virtual machines that are hosted at Scholars Portal. The size of the hardware required relates to the size and quantity of files to be processed, so subscribers should have a good sense of extent the materials they intend to process. A Level 1 machine is most comfortably used for packages in the 0-50 GB range and consisting of fewer than 500 files. A Level 2 machine will be able to process larger-sized transfers of 50-250 GB and is recommended for organizations with greater quantities of audio and video or greater quantities of files. Part of the onboarding process will involve assessing what machine is right for your needs."
 		id = "17"
 
    		[[params.faq.questions]]
@@ -295,7 +295,7 @@ googleAnalytics = ""
 
 		[[params.faq.questions]]
    		question = "I'm interested. How do I get started?"
-   		answer = "Please [contact us](#contact) to express interest. Access to a sandbox instance is also available for those interested in a demonstration."
+   		answer = "Please [contact us](#contact) to express interest in subscribing! Access to a sandbox instance is also available for those interested in testing the service out."
 		id = "19"
 
 	# Team section (disabled)
